wlcs (1.7.0-0ubuntu0) UNRELEASED; urgency=medium

  * New upstream release. Notable changes:
    + New tests for input-method-v1 (#302)
    + Handle incomplete logical pointer/touch events better (#313)
    + XdgToplevelStable: Fix race in .configure handling (#318)
    + helpers: avoid triggering a kernel warning (#320)
    + InProcessServer: Fix xdg_shell window construction (#324)

 -- Michał Sawicz <michal.sawicz@canonical.com>  Tue, 05 Dec 2023 13:52:28 +0100

wlcs (1.6.1-0ubuntu0) UNRELEASED; urgency=medium

  * Bump project version in CMakeLists.txt

 -- Michał Sawicz <michal.sawicz@canonical.com>  Tue, 10 Oct 2023 12:14:27 +0200

wlcs (1.6.0-0ubuntu0) UNRELEASED; urgency=medium

  * New upstream release. Notable changes:
    + Update wayland.xml to latest
    + XDG stable: use mock methods instead of notification lists
    + Test popup constraint_adjustment
    + Tests for XDG shell (stable) version 5
    + Test that text input is entered after child window is closed
    + Copy geometry headers from Mir
    + Test popups are dismissed in the correct order
    + Test buffer can be deleted after it's attached
    + Less flaky synchronization for VirtualPointerV1Test (#297, #294)
    + VirtualPointerV1Test: no-events-sent test fails if events are sent (#296)
    + Fix various frame-event misunderstandings
    + Change remaining std::experimental::optionals to std::optional

 -- Alan Griffiths <alan@octopull.co.uk>  Mon, 17 Jul 2023 13:12:00 +0100

wlcs (1.5.0-0ubuntu0) UNRELEASED; urgency=medium

  * New upstream release. Notable changes:
    + Tests for zwlr_virtual_pointer_v1
    + Use maximum shared version when binding globals (Fixes #234)
    + Make zxdg_shell_v6 ExpectedlyNotSupported if not in supported_extensions
      (Fixes #237)
    + Destroy xdg_toplevel before xdg_surface on cleanup
    + Fixup CMakeLists.txt so tests can use MOCK_METHOD
    + c++20
    + Fix BadBufferTest.test_truncated_shm_file protocol error