@@ -6,6 +6,7 @@ wlcs (1.7.0-0ubuntu0) UNRELEASED; urgency=medium
     + XdgToplevelStable: Fix race in .configure handling (#318)
     + helpers: avoid triggering a kernel warning (#320)
     + InProcessServer: Fix xdg_shell window construction (#324)
+    + XdgSurfaceStable: Fix configure event logic
 
  -- Michał Sawicz <michal.sawicz@canonical.com>  Tue, 05 Dec 2023 13:52:28 +0100
 
